--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -460,17 +460,14 @@ block Middle
 		div 불러오는 중
 	+Product('RoomList')
 		div 불러오는 중
+	+Product('SideList')
+		div 불러오는 중
 	+Product('Shop')
 		div.shop-categories
 			- for(var i in locals.CATEGORIES)
 				- var v = locals.GROUPS[locals.CATEGORIES[i]] || [];
 				div.category-filter.shop-type(id="shop-type-" + locals.CATEGORIES[i], value=v.join(','))!= L('category_' + locals.CATEGORIES[i])
-		div#shop-shelf(style='width: 100%; height: 305px; overflow-y: scroll;')
-		div.goods#plusCoinShop(style="background-position: center; background-size: cover; background-image: url(/img/kkutu/shop/coinshopBG.png); height: 75px; width: 1240px; display: block;")
-			div(style="color: #ffffff; float: none; text-align: center; font-size: 20px;")
-				| 
-			div(style="text-shadow: 2px 2px 0px black; color: #ffffff; font-style: italic; float: none; text-align: center; font-size: 30px; font-weight: bold;")
-				| 
+		div#shop-shelf(style='width: 100%; height: 400px; overflow-y: scroll;')
 
 	+Product('Room')
 		div.team-selector
