네오프론트

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -437,6 +437,8 @@ block Middle
 			button.primaryBtn#obtain-ok= L('OK')
 	+Dialog('HelpDiag', 1000, 540, L('helpText', false))
 		iframe#help-board(width=1000, height=480)
+	+Dialog('PingShopDiag', 400, 760, "코인 상점")
+		iframe#ping-board(width=400, height=700)
 	+Dialog('Community2Diag', 1280, 750, "공식 커뮤니티")
 		iframe#community2(width=1280, height=700)
 	+Dialog('LicenseDiag', 645, 180, "저작권 정보")
