--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -1220,6 +1220,10 @@ min-height: 480px;
     height: 200px;
     bottom: 0;
 }
+.ChatBox:hover{
+    background-color: rgba(0,0,0,1);
+}
+
 
 	.MeBox div{ float: left; }
 	.bar-text{ color: #EEEEEE; text-align: center; text-shadow: 0px 1px 1px #141414; }
