--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -57,7 +57,7 @@
 
 mixin Menu()
 	div.Menu
-		img(src='https://cdn.kkutu.cc/img/kkutu/logo.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', alt="로고")
+		img(src='https://cdn.kkutu.cc/img/kkutu/logo-obt.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', alt="로고")
 		- for(i in MENU)
 			- if(MENU[i].href)
 				button.menu-btn(id='menu-item-'+MENU[i].key, onclick='location.href = "'+MENU[i].href+'";')!= L(MENU[i].key)
@@ -73,6 +73,7 @@ mixin Menu()
 					img.fuckHank(src='https://cdn.kkutu.cc/img/kkutu/currency/Ping.svg')
 					span.my-stat-ping.aISub#accping
 					span.fuckSeogom= "핑"
+					img.fuckHank#addBalance(src='https://cdn.kkutu.cc/img/kkutu/currency/charge.svg')
 			div.accountItem
 				div.flex
 					img.fuckHank(src='https://cdn.kkutu.cc/img/kkutu/currency/Win.svg')
@@ -99,7 +100,7 @@ mixin Menu()
 
 mixin MMenu()
 	div.Menu
-		img(src='https://cdn.kkutu.cc/img/kkutu/logo.svg', style='margin-left: 10px;margin-top: 10px;height: 1.7rem;', alt="로고")
+		img(src='https://cdn.kkutu.cc/img/kkutu/logo-obt.svg', style='margin-left: 10px;margin-top: 10px;height: 1.7rem;', alt="로고")
 		div#account
 			span#profile= SESSION.profile ? JSON.stringify(SESSION.profile) : '{}'
 			div#account-info
