--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -55,7 +55,7 @@ html
 			src="/media/idM0YfRCz5.lottie",
 			background="#ffffff",
 			speed="1",
-			style="width: 100vw; hegiht: 100vh;",
+			style="width: 100vw; hegiht: 100vh;     min-width: 1600px;",
 			direction="1",
 			mode="normal",
 			loop="false",
