--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -91,7 +91,7 @@ mixin Menu()
 					span.my-okg-text.aISub#accping
 				div
 					+GraphBar('my-okg')
-			div.accountItem
+			div.accountItem#signin(data-intro='Hello step one!')
 				div.flex
 					//img.my-stat-level
 					span#account-info.aISub
