--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -1,24 +1,88 @@
-@import url("https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.1/packages/wanted-sans/fonts/webfonts/variable/split/WantedSansVariable.min.css");
+@font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
+            @font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+            @font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+          
 
 :root {
-	--font-body: "Wanted Sans Variable", "Wanted Sans", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	--font-body: 'NEXON Lv1 Gothic OTF', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-family: var(--font-body);
 }
 
+.font-bold{
+  font-weight:700;
+}
+.font-semibold{
+  font-weight:500;
+}
 .hero{
-	width: 100%;
-	height: 600px;
-	background-position: center center;
-	background-size: auto 100%;
-	background-image: url(/img/top.png);
+	background-size: cover;
+	background-image: url(/img/transition.png);
 	background-repeat: no-repeat;
 }
 
-.m-hero{
-	background-position: center;
-    background-size: cover;
-    background-image: url(/img/m-top.png);
-    height: 250px;
+.gs{
+	background-size: cover;
+	background-image: url(/img/start_bg.png);
+	background-repeat: no-repeat;
+}
+
+.modal {
+    @apply fixed inset-0 w-full h-full bg-gray-800 bg-opacity-75 flex items-center justify-center;
+    display: none;
+  }
+
+  .visible {
+    display: flex;
+  }
+
+  .modal-content {
+    @apply bg-white p-8 rounded-xl;
+  }
+
+.boardBg-7{
+	@apply bg-indigo-500;
+}
+.boardBg-8{
+	@apply bg-blue-500;
+}
+.boardBg-14{
+	@apply bg-yellow-500;
+}
+.boardBg-9{
+	@apply bg-green-500;
+}
+.boardBg-6{
+	@apply bg-purple-500;
+}
+.boardBg-1{
+	@apply bg-gray-500;
+}
+.boardBg-10{
+	@apply bg-gray-500;
+}
+.boardBg-11{
+	@apply bg-gray-500;
+}
+.boardBg-12{
+	@apply bg-gray-500;
+}
+.boardBg-13{
+	@apply bg-gray-500;
 }
