--- a/neofront/static/css/in_m_game_kkutu.css
+++ b/neofront/static/css/in_m_game_kkutu.css
@@ -128,14 +128,15 @@ iframe{
 		background-color: #444444 !important;
 	}
 .dialog{
-	display: none;
-	position: fixed;
-	padding: 5px;
-	border-radius: 10px;
-	color: #111111;
-	box-shadow: 0px 1px 1px #141414;
-	background-color: #EEEEEE;
-	z-index: 1;
+    top: 0px!important;
+    left: 0px!important;
+    height: 94vh!important;
+    width: 100vw!important;
+    display: none;
+    position: fixed;
+    color: #111111;
+    box-shadow: 0px 1px 1px #141414;
+    background-color: #EEEEEE;
 }
 	.dialog-bar{ float: left; margin: 3px 0px; width: 100%; }
 	.dialog-bar h4{ float: left; padding-top: 6px; width: 100px; text-align: center; }
