--- a/neofront/static/css/m_style.css
+++ b/neofront/static/css/m_style.css
@@ -22,7 +22,7 @@ body{
 	padding: 0px;
 	margin: 0px;
 	min-width: 360px;
-	font-family: 'Noto Sans KR', 맑은 고딕, 돋움;
+	font-family: 'Pretendard', 맑은 고딕, 돋움;
 }
 a{
 	color: inherit;
