--- a/Server/lib/Web/public/css/in_game_kkutu_shop.css
+++ b/Server/lib/Web/public/css/in_game_kkutu_shop.css
@@ -17,31 +17,32 @@
  */
 
 .goods{
-	margin: 2px;
-	padding: 3px;
-	width: 240px;
-	height: 50px;
-	background-color: #ffffff;
-	box-shadow: 0px 1px 1px #777777;
-	cursor: pointer;
+	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.10), 0px 4px 6px -4px rgba(0, 0, 0, 0.10);
+    margin: 2px;
+    padding: 15px;
+    width: 275px;
+    height: 50px;
+    border-radius: 16px;
+    background: #FFF;
+    cursor: pointer;
 }
 	.goods:hover{ background-color: #F4F4F4; }
 	.goods-image{ margin: 2px; width: 50px; height: 50px; }
-	.goods-title{ margin: 2px 0px; width: 186px; font-size: 15px; font-weight: bold; }
-	.goods-cost{ margin: 2px 0px; width: 186px; color: #3333FF; }
-.shop-categories{ margin: -3px 0px 5px 0px; }
+	.goods-title{     margin: 0px 0px 6px 12px;font-size: 24px;font-weight: 700; }
+	.goods-cost{ font-size: 15px;
+		margin-left: 12px;
+		width: 186px;
+		color: #000000; }
+.shop-categories{ margin: 25px 0px 25px 20px; }
 	.shop-type{
 		padding: 5px 0px;
-		border: 1px solid #AAAAAA;
-		border-radius: 0px;
-		margin-right: 3px;
-		width: 100px;
-		font-weight: 700;
-		font-size: 15px;
-		text-align: center;
-		cursor: pointer;
-		background-color: #DDDDDD;
-		transition: all 100ms ease;
+    margin-right: 20px;
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    color: #6B7280;
+    transition: all 100ms ease;
 	}
 
 /* NIK */
