--- a/Server/lib/Web/public/css/m_style.css
+++ b/Server/lib/Web/public/css/m_style.css
@@ -22,7 +22,7 @@ body{
 	padding: 0px;
 	margin: 0px;
 	min-width: 360px;
-	font-family: 'Noto Sans KR', 맑은 고딕, 돋움;
+	font-family: 'Pretendard', 맑은 고딕, 돋움;
 }
 a{
 	color: inherit;
@@ -68,7 +68,7 @@ span{
 	font-size: 15px;
 	text-align: center;
 	color: #47330D;
-	background-image: url('https://cdn.kkutu.cc/img/topbg.png');
+	background-image: url('/img/topbg.png');
 	background-color: #DEAF56;
 	transition: all 200ms ease;
 }
