--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -95,6 +95,9 @@ mixin Menu()
 				div.flex
 					//img.my-stat-level
 					span#account-info.aISub
+			div.iconItem#SideMenuBtn
+				div.flex
+					+FA('bars')
 			//div
 
 mixin MMenu()
