--- a/Server/lib/Web/public/css/style.css
+++ b/Server/lib/Web/public/css/style.css
@@ -167,6 +167,18 @@ span{
     border-radius: 999px;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+.iconItem{
+	align-items: center;
+    height: 45px;
+    min-width: 45px;
+    font-size: 20px;
+    margin-right: 8px;
+    margin-top: 8px;
+    color: #000000;
+    background-color: #ffffff;
+    border-radius: 999px;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
 .flex{
 	height: 100%;
     align-items: center;
