--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -430,6 +430,26 @@ iframe{
 	.hidden{
 		display: none;
 	}
+/* style.css */
+
+.side-panel {
+	background-color: #f3f4f6;
+	box-shadow: -4px 0px 4px 0px rgba(0, 0, 0, 0.25);
+
+	padding: 50px;
+	height: 100%;
+    z-index: 10;
+    position: absolute;
+    right: 0;
+    top: 0;
+	width: 640px;
+  }
+
+  .panel-content h2 {
+	font-weight: 700;
+	font-size: 20px;
+  }
+	
 		.dialog-head .dialog-title{ float: left; cursor: move; }
 #replay-players{ height: 140px; overflow-y: scroll; }
 	.replay-player-bar{ float: left; width: 100%; }
@@ -593,9 +613,7 @@ iframe{
 	.ShopBox .product-body{ width: 100%;
 		height: 100%; }
 .RoomBox{
-	min-width: 99.25%;
-    max-width: 100%;
-	border-radius: 8px;
+	width: 100%;
 }
 	.RoomBox .product-title{ height: 30px; }
 	.RoomBox .product-title h5{ float: left; font-size: 20px;}
@@ -693,8 +711,6 @@ iframe{
 		.room-user:hover{ cursor: pointer; background: linear-gradient(180deg, rgba(65,77,96,1) 0%, rgba(87,102,124,1) 100%); }
 .GameBox{
 	width: 100%!important;
-	max-height: 480px;
-	min-height: 480px;
 	background-image: url('/img/kkutu/gamebg.png');
 }
 	.GameBox .product-title{ height: 30px; }
@@ -1175,7 +1191,7 @@ iframe{
 }
 .ChatBox{
     backdrop-filter: none;
-    width: 100%!important;
+    width: 310px!important;
     height: 100%!important;
 }
 
