--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -91,9 +91,48 @@ equ{
 #Bottom .bottom-text{ display: none; }
 
 .sidebtn{
-	width: 100%;
-    padding: 0px;
-    border: none;
+	width: 540px;
+	height: 50px;
+	flex-shrink: 0;
+	border-radius: 8px;
+	background-color: #FFF;
+	margin-bottom: 15px;
+	padding: 0px;
+	text-align: left;
+	font-size: 24px;
+    padding: 0px 20px 0px 20px;
+	box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+	border: none;
+}
+.sidebtn .fa, .sidebtn h3 {
+    display: inline-block;
+}
+.sidebtn .fa {
+    margin-right: 11px;
+}
+.sidebtn h3 {
+    font-size: 24px;
+}
+.my-okg-text{
+	border-radius: 99px;
+    background: #4B5563;
+    margin-left: 11px;
+    padding: 2px 8px;
+    font-size: 15px;
+    color: #FFF;
+}
+.sideFooter{
+	display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
+}
+.sideFooter img{
+    height: 24px;
+}
+.sideFooter p{
+    color: #4B5563;
+    font-size: 16px;
 }
 
 #facebook-menu{
@@ -445,9 +484,19 @@ iframe{
 	width: 640px;
   }
 
+  #SideMenuCloseBtn{
+	font-size: 36px;
+    border: none;
+    border-radius: 999px;
+    background-color: transparent;
+    padding: 0px;
+  }
+
   .panel-content h2 {
-	font-weight: 700;
-	font-size: 20px;
+	color: #000;
+    font-size: 36px;
+    font-weight: 700;
+	margin-bottom: 24px;
   }
 	
 		.dialog-head .dialog-title{ float: left; cursor: move; }
@@ -546,7 +595,7 @@ iframe{
 	.users-item{     padding: 7px 11px;
 		width: 256px!important;
 		border-radius: 8px;
-		background: #FFF!important;
+		background-color: #FFF!important;
 		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 		width: 190px; }
 		.users-image{ margin: 1px; width: 20px; height: 20px; }
@@ -560,11 +609,15 @@ iframe{
 	height: 100%;
 }
 	.RoomListBox div{ float: left; }
-	.RoomListBox .product-body{ width: calc(100% - 25px); height: 430px; overflow-x: hidden; overflow-y: scroll; }
+	.RoomListBox .product-body{padding: 20px;
+		width: calc(100% - 25px);
+		height: calc(100% - 44px);
+		overflow-x: hidden;
+		overflow-y: scroll; }
 	.rooms-item{
 		padding: 5px;
 		border-radius: 10px;
-		margin: 4px 16px 4px 0px;
+		margin: 0px 35px 11px 0px;
 		width: 470px;
 		box-shadow: 0px 1px 1px #777777;
 		cursor: pointer;
@@ -573,19 +626,20 @@ iframe{
 		background-image: url(/img/kkutu/room/Waiting.png);
 		transition: all 300ms ease;
 	}
-		.rooms-create{ background-position: center;
-			background-size: cover;
-			background-image: url(/img/kkutu/createRoom.png); }
-		.rooms-create:hover{
-				background-image: url(/img/kkutu/createRoomHover.png); }
-		.rooms-create>div{ text-shadow: 2px 2px 0px black;
-			color: #ffffff;
-			font-style: italic;
+		.rooms-create{ width: 600px;
+			height: 90px;
+			border-radius: 16px;
+			background: #BFDBFE;
+			box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.10), 0px 4px 6px -4px rgba(0, 0, 0, 0.10);
+		}
+		.rooms-create>div{ font-size: 36px;
+			color: #000000;
 			float: none;
-			padding: 10px 0px;
 			text-align: center;
-			font-size: 30px;
-			font-weight: bold; }
+			font-weight: bold;
+			padding-top: 23px; }
+
+		.rooms-create>div i{ margin-right: 10px; }
 		.rooms-channel{ position: relative; width: 10px; height: 10px; border-radius: 5px; margin-right: -10px; }
 			.rooms-channel:hover{ width: 8px; height: 8px; border: 1px solid #000; }
 			.channel-1{ background-color: #F99; }
